# RAGCorpus

./: .env.example  .gitignore  CLAUDE.md  DEPENDENCIES.md  FILE_MANIFEST.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION.md  InitialInstructions.md  MIGRATION_NOTES.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  START_HERE.md  SYSTEM_CHECKLIST.md  USAGE_GUIDE.md  chainlit.md  pyproject.toml  requirements-core.txt  requirements-heavy.txt  requirements-minimal.txt  requirements-optional.txt  requirements-pinned.txt  requirements.txt
.claude/: settings.local.json
docs/: DATABASE_SETUP.md
examples/: cross_examine_example.py  simple_query.py
scripts/: ingest_corpus.py  test_system.py
src/: __init__.py
src/agent/: __init__.py  cross_examine.py  graph.py  tools.py
src/config/: __init__.py  settings.py
src/ingestion/: __init__.py  canvas_parser.py  ocr_processor.py  pipeline.py  translator.py
src/integrations/: __init__.py  paper_finder.py  zotero_client.py
src/retrieval/: __init__.py  hybrid_retriever.py  reranker.py
src/storage/: __init__.py  project_manager.py  vector_store.py
src/ui/: __init__.py  app.py
